--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,10 +31,18 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  intl: ^0.17.0
+  azlistview: ^2.0.0
+  firebase_core: ^2.4.0
+  firebase_auth: ^4.2.1
+  cloud_firestore: ^4.3.0
+  firebase_storage: ^11.0.9
+  localstorage: ^4.0.0+1
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +60,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
